--- a/style.css
+++ b/style.css
@@ -132,8 +132,8 @@ h1{
 }
 .right-btn{
   position: fixed;
-  right: 30px;
-  top: 20px;
+  right: 10px;
+  top: 10px;
   display: none; 
   z-index: 1; 
   background-color: #149ddd;
@@ -162,7 +162,7 @@ h1{
   background-color: unset;
 }
 .can-btn{
-  background-color: #149ddd;
+  background-color: unset;
   border-radius: 50%;
   width: 25px;
   font-size: 15px;
@@ -842,10 +842,13 @@ h1{
 form label{
   font-size: 17px;
   font-family: 'Poppins';
+  font-weight: bold;
 }
 .form-control{
   border-radius: unset;
+  font-weight: bold;
   height: 45px;
+  font-family: 'Poppins';
 }
 .form-control:focus{
   box-shadow: unset;
@@ -869,7 +872,7 @@ form label{
 }
 @media screen and (max-width:426px){
     .contact-div iframe{
-      width: 300px!important;
+      width: auto !important;
     }
     .col-div .fa{
       font-size: 23px;
